prusti/tests/parse/ui/parenthesis.stderr
error: not matching parenthesis
 --> $DIR/parenthesis.rs:6:12
  |
6 | #[requires="(true"]
  |            ^^^^^^^

error: not matching parenthesis
 --> $DIR/parenthesis.rs:9:12
  |
9 | #[requires="true)"]
  |            ^^^^^^^

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:12:21
   |
12 | #[requires="   (    12345)"]
   |                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:15:21
   |
15 | #[requires="   (    12345 && (
   |                     ^^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/parenthesis.rs:18:19
   |
18 |         (false && 1234 || 
   |                   ^^^^ expected bool, found integral variable
   |
   = note: expected type `bool`
              found type `{integer}`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
